# docker_workflows-

./: .coveragerc  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: test.yml
app/: __init__.py  auth.py  config.py  database.py  main.py  models.py  routes.py  schemas.py  utils.py
tests/: __init__.py  conftest.py  test_api.py  test_auth.py  test_database.py  test_models.py
